[gd_scene load_steps=14 format=3 uid="uid://dmsf72xefdqb"]

[ext_resource type="Script" uid="uid://bvdkeot5sw57r" path="res://Nodes_Alvin/crane_game_parent_node.gd" id="1_hn4cn"]
[ext_resource type="PackedScene" uid="uid://cy486p43w4iie" path="res://Nodes_Alvin/crane_machine_level.tscn" id="1_xehnx"]
[ext_resource type="Texture2D" uid="uid://2xoqpwypimf1" path="res://Assets_Alvin/Sprites/Main Menu/GetAGripCover.png" id="2_mn8bq"]
[ext_resource type="PackedScene" uid="uid://grb1qkthhtwl" path="res://score_and_collection.tscn" id="3_x8sla"]
[ext_resource type="Texture2D" uid="uid://nlmem53ttoqv" path="res://Assets_Alvin/Sprites/Main Menu/Start.png" id="4_2tvv5"]
[ext_resource type="Texture2D" uid="uid://beuwhfshc28vx" path="res://Assets_Alvin/Sprites/Game Over Screen/GameOverTitle.png" id="4_81aif"]
[ext_resource type="Texture2D" uid="uid://cqpoqqv887dcy" path="res://Assets_Alvin/Sprites/Main Menu/rate.png" id="5_1mtxp"]
[ext_resource type="FontFile" uid="uid://dqoplngdh5kc3" path="res://Assets_Alvin/Kodchasan-Regular.ttf" id="5_2tvv5"]
[ext_resource type="Texture2D" uid="uid://cniydfwxw6uh" path="res://Assets_Alvin/Sprites/Game Over Screen/MainMenu.png" id="5_x8sla"]
[ext_resource type="Texture2D" uid="uid://cklhcp8gp2c2v" path="res://Assets_Alvin/Sprites/Game Over Screen/Retry.png" id="6_556vl"]
[ext_resource type="PackedScene" uid="uid://dblddv4nx7whc" path="res://ScoreToy.tscn" id="7_556vl"]
[ext_resource type="Texture2D" uid="uid://d0u03lmqdnd3q" path="res://Assets_Alvin/Sprites/Continue.png" id="7_fxcit"]
[ext_resource type="Texture2D" uid="uid://cgte82n4hbkfd" path="res://Assets_Alvin/Sprites/Ending/EndingScreen.png" id="13_2tvv5"]

[node name="CraneGameParentNode" type="Node2D"]
script = ExtResource("1_hn4cn")

[node name="Main" type="Node2D" parent="."]
visible = false

[node name="Background" type="Sprite2D" parent="Main"]
position = Vector2(580.222, 319.375)
scale = Vector2(0.304282, 0.304282)
texture = ExtResource("2_mn8bq")

[node name="Start" type="Button" parent="Main"]
offset_left = 488.0
offset_top = 456.0
offset_right = 1072.0
offset_bottom = 720.0
scale = Vector2(0.3, 0.3)
icon = ExtResource("4_2tvv5")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Main"]
modulate = Color(0, 0, 0, 1)
offset_left = 944.0
offset_top = 466.0
offset_right = 1136.0
offset_bottom = 640.0

[node name="RichTextLabel" type="RichTextLabel" parent="Main"]
offset_left = 952.0
offset_top = 472.0
offset_right = 1140.0
offset_bottom = 642.0
theme_override_fonts/normal_font = ExtResource("5_2tvv5")
theme_override_font_sizes/normal_font_size = 25
text = "Made By:
Alvin Stilley
Erin Stilley
Robert Allison
Gabriel Pierre
"

[node name="Sprite2D" type="Sprite2D" parent="Main"]
position = Vector2(576, 552)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_1mtxp")

[node name="CraneMachineLevel" parent="." instance=ExtResource("1_xehnx")]

[node name="ScoreAndCollection" parent="." instance=ExtResource("3_x8sla")]
visible = false

[node name="Score Toy1" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(190, 87)

[node name="Score Toy2" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(382, 90)

[node name="Score Toy3" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(570, 92)

[node name="Score Toy4" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(772, 95)

[node name="Score Toy5" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(978, 92)

[node name="Score Toy6" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(194, 259)

[node name="Score Toy7" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(384, 259)

[node name="Score Toy8" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(574, 260)

[node name="Score Toy9" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(763, 263)

[node name="Score Toy10" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(956, 261)

[node name="Score Toy11" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(186, 431)

[node name="Score Toy12" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(386, 428)

[node name="Score Toy13" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(579, 437)

[node name="Score Toy14" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(764, 435)

[node name="Score Toy15" parent="ScoreAndCollection" groups=["ScoredToy"] instance=ExtResource("7_556vl")]
position = Vector2(961, 438)

[node name="Next2" type="Button" parent="ScoreAndCollection"]
offset_left = 832.0
offset_top = 592.0
offset_right = 1608.0
offset_bottom = 728.0
scale = Vector2(0.415469, 0.415469)
icon = ExtResource("7_fxcit")

[node name="Game Over" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Game Over"]
position = Vector2(571, 232)
scale = Vector2(0.276562, 0.276562)
texture = ExtResource("4_81aif")

[node name="Main Menu" type="Button" parent="Game Over"]
offset_left = 440.0
offset_top = 408.0
offset_right = 1344.0
offset_bottom = 544.0
scale = Vector2(0.25, 0.25)
icon = ExtResource("5_x8sla")

[node name="Retry" type="Button" parent="Game Over"]
offset_left = 488.0
offset_top = 360.0
offset_right = 1008.0
offset_bottom = 496.0
scale = Vector2(0.25, 0.25)
icon = ExtResource("6_556vl")

[node name="Sound Effects" type="AudioStreamPlayer" parent="."]

[node name="Scene Themes" type="AudioStreamPlayer" parent="."]
volume_db = -6.559

[node name="GameEnd" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="GameEnd"]
position = Vector2(588, 330)
scale = Vector2(0.311156, 0.311156)
texture = ExtResource("13_2tvv5")

[node name="Button" type="Button" parent="GameEnd"]
offset_left = 888.0
offset_top = 608.0
offset_right = 1792.0
offset_bottom = 744.0
scale = Vector2(0.294493, 0.294493)
icon = ExtResource("5_x8sla")

[connection signal="ScoreToy" from="." to="ScoreAndCollection/Score Toy1" method="_on_crane_game_parent_node_score_toy"]
[connection signal="pressed" from="Main/Start" to="." method="_on_start_pressed"]
[connection signal="button_down" from="ScoreAndCollection/Next2" to="." method="_on_next_2_button_down"]
[connection signal="button_down" from="Game Over/Main Menu" to="." method="_on_main_menu_button_down"]
[connection signal="button_down" from="Game Over/Retry" to="." method="_on_retry_button_down"]
[connection signal="finished" from="Scene Themes" to="." method="_on_scene_themes_finished"]
[connection signal="pressed" from="GameEnd/Button" to="." method="_on_button_pressed"]
